--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,6 +1,6 @@
 /* Import Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&family=Noto+Serif+JP:wght@700&display=swap');
-@import url('../public/styles/custom-icons.css');
+@import url('custom-icons.css');
 
 :root {
     --bg-primary: #ffffff;
